# obd-suite-2

./: .env.dev  .env.prod  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml
.github/workflows/: auto-pr.yml  ci.yml  deploy-dev.yml  deploy-prod.yml
backend/: __init__.py  config.py  crud.py  main.py  models.py  pyproject.toml  requirements.txt
backend/auth/: google.py  main.py  phone.py  utils.py
backend/tests/: test_main.py
mobile/: pubspec.yaml
mobile/lib/: main.dart
scripts/: deploy.sh
web/: next.config.js  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
web-app/: package.json
web-app/pages/: index.tsx
web-app/pages/api/auth/: [...nextauth].ts
web/components/ui/: avatar.tsx  badge.tsx  bottom-nav.tsx  button.tsx  card.tsx  dropdown-menu.tsx  header.tsx  input.tsx  navigation-menu.tsx  tabs.tsx
web/pages/: _app.tsx  account.tsx  dashboard.tsx  dtc.tsx  history.tsx  index.tsx  live.tsx
web/pages/api/auth/: [...nextauth].ts
web/styles/: globals.css
web/tests/: index.test.tsx  setup.ts  status.test.ts
